--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,21 +1,44 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-    <LinearLayout
-            android:id="@+id/validity"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="vertical"
-            android:layout_gravity="bottom"
-            android:background="@android:color/white">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Time and day goes here"
-                android:id="@+id/dateandtime"
-        />
-    </LinearLayout>
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/greenMarker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/green_marker"
+        android:contentDescription="@string/greenMarkerDesc"
+        mapbox:layout_constraintTop_toTopOf="@+id/mapView"
+        mapbox:layout_constraintStart_toStartOf="@+id/mapView" mapbox:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"/>
 
+    <ImageView
+        android:id="@+id/redMarker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/red_marker"
+        android:contentDescription="@string/redMarkerDesc" mapbox:layout_constraintTop_toTopOf="@+id/mapView"
+        mapbox:layout_constraintStart_toStartOf="@+id/mapView"/>
 
-</FrameLayout>
+    <com.mapbox.mapboxsdk.maps.MapView
+        android:id="@+id/mapView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        mapbox:layout_constraintBottom_toBottomOf="parent"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent"
+        mapbox:layout_constraintTop_toTopOf="parent"
+        mapbox:mapbox_cameraTargetLat="35.300"
+        mapbox:mapbox_cameraTargetLng="-120.660"
+        mapbox:mapbox_cameraZoom="16"
+        mapbox:mapbox_cameraZoomMax="18"
+        mapbox:mapbox_cameraZoomMin="14"
+        mapbox:layout_constraintHorizontal_bias="1.0"
+        mapbox:layout_constraintVertical_bias="0.0"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
